# TokenFlow

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  generate_prompt.py  main.py  prompt.txt.example  pyproject.toml  requirements.txt
tests/: test_cli.py  test_client.py  test_models.py  test_pricing.py  test_scheduler.py  test_stats.py  test_targets.py  test_tokenizer.py  test_ui.py
tokenflow_cli/: __init__.py  cli.py  client.py  config.py  errors.py  models.py  onboarding.py  pricing.py  prompt_generator.py  request_log.py  scheduler.py  state.py  stats.py  targets.py  tokenizer.py  ui.py
tokenflow_cli/templates/: config.example.yaml  env.example  prompt.txt.example
